--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,21 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
 
     <style>
         body {
+            height: 100vh;
+            /*
+            
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            Shorthando - background
+            color > image > position > repeat > [size] > attachment
+
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
-            background-color: antiquewhite;
-            width: 400px;
+            background-color: white;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +41,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio odit repellat nobis voluptatibus quibusdam debitis assumenda. Assumenda facere, modi exercitationem nobis, quod temporibus sunt, atque delectus voluptates amet praesentium ea. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto quae eveniet distinctio temporibus, voluptatum vitae fugiat dolorum delectus aperiam, earum alias! Et eaque ab cupiditate aperiam commodi magni reiciendis perferendis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sequi architecto ullam inventore sed sint qui tempore, explicabo quidem consequatur, tempora aperiam aliquam? Voluptates, nostrum assumenda! Ad veritatis nesciunt totam?  </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio odit repellat nobis voluptatibus quibusdam debitis assumenda. Assumenda facere, modi exercitationem nobis, quod temporibus sunt, atque delectus voluptates amet praesentium ea. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto quae eveniet distinctio temporibus, voluptatum vitae fugiat dolorum delectus aperiam, earum alias! Et eaque ab cupiditate aperiam commodi magni reiciendis perferendis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sequi architecto ullam inventore sed sint qui tempore, explicabo quidem consequatur, tempora aperiam aliquam? Voluptates, nostrum assumenda! Ad veritatis nesciunt totam?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio odit repellat nobis voluptatibus quibusdam debitis assumenda. Assumenda facere, modi exercitationem nobis, quod temporibus sunt, atque delectus voluptates amet praesentium ea. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto quae eveniet distinctio temporibus, voluptatum vitae fugiat dolorum delectus aperiam, earum alias! Et eaque ab cupiditate aperiam commodi magni reiciendis perferendis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sequi architecto ullam inventore sed sint qui tempore, explicabo quidem consequatur, tempora aperiam aliquam? Voluptates, nostrum assumenda! Ad veritatis nesciunt totam?  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio odit repellat nobis voluptatibus quibusdam debitis assumenda. Assumenda facere, modi exercitationem nobis, quod temporibus sunt, atque delectus voluptates amet praesentium ea. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto quae eveniet distinctio temporibus, voluptatum vitae fugiat dolorum delectus aperiam, earum alias! Et eaque ab cupiditate aperiam commodi magni reiciendis perferendis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sequi architecto ullam inventore sed sint qui tempore, explicabo quidem consequatur, tempora aperiam aliquam? Voluptates, nostrum assumenda! Ad veritatis nesciunt totam?  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio odit repellat nobis voluptatibus quibusdam debitis assumenda. Assumenda facere, modi exercitationem nobis, quod temporibus sunt, atque delectus voluptates amet praesentium ea. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto quae eveniet distinctio temporibus, voluptatum vitae fugiat dolorum delectus aperiam, earum alias! Et eaque ab cupiditate aperiam commodi magni reiciendis perferendis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sequi architecto ullam inventore sed sint qui tempore, explicabo quidem consequatur, tempora aperiam aliquam? Voluptates, nostrum assumenda! Ad veritatis nesciunt totam?  </p>
     </main>
 </body>
 </html>
